--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="index.css">
-    <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="/index.css">
+    <script src="/scripts.js" defer></script>
     <title>Chess</title>
 </head>
 <body>
 <header>
-    <div class="player">
+    <div id="player_1" class="player">
         <div class="player_img"></div>
         <div class="player_name"></div>
     </div>
-    <div class="player">
+    <div id="player_2" class="player">
         <div class="player_img"></div>
         <div class="player_name"></div>
     </div>
@@ -26,6 +26,6 @@
         moves
     </aside>
 </main>
-
+<script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
