[FE] Add hover for move destination, add line numbers and chars

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     </div>
 </header>
 <main class="wrapper">
-    <div id="board" class="board"></div>
+    <div class="game">
+        <div class="board">
+            <div class="rows"></div>
+            <div id="field" class="field"></div>
+        </div>
+        <div class="alphabet"></div>
+    </div>
     <aside>
         moves
     </aside>
