[FE] Add auto incrementing move recording

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div class="alphabet"></div>
     </div>
     <aside>
-        moves
+        <div class="moves">
+        </div>
     </aside>
 </main>
 <script src="/socket.io/socket.io.js"></script>
